Replaced Ant "build file" with "buildfile"

--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-89_generate_buildxml.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-89_generate_buildxml.htm
@@ -13,7 +13,7 @@
 <P CLASS="Para">Open a Navigator view and locate your new plug-in project.</P>
 <ol>
   <li>Select the file 'plugin.xml' underneath your new project and right-click 
-    <b>Create Ant Build File</b>.</li>
+    <b>Create Ant Buildfile</b>.</li>
   <li>A new file, 'build.xml' will be created underneath your project.</li>
   <li>Open the Ant editor on the build.xml file by double clicking it in the Navigator. 
     Notice that for this file, the Ant editor is the default editor. This is because 
