--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-85a_ant_view.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-85a_ant_view.htm
@@ -20,25 +20,25 @@
   <li>By default, the Ant view is empty. There are two ways to add Ant buildfiles to 
     this view: 
     <ul>
-      <li>Click the 'Add Build File' button. This brings up a dialog in which 
+      <li>Click the 'Add Buildfile' button. This brings up a dialog in which 
         you explicitly select those Ant buildfiles you want to add</li>
-      <li>Click the 'Add Build Files with Search' button. This brings up a search 
+      <li>Click the 'Add Buildfiles with Search' button. This brings up a search 
         dialog in which you can specify a filename pattern for your Ant buildfiles 
         and search within the entire workspace or a specified working set</li>
     </ul>
   </li>
   <li>Once added to the Ant view, Ant buildfile entries remain in the view across 
     workbench invocations until explicitly removed.</li>
-  <li>Click the Add Build Files with Search button. Suppose you only remember 
+  <li>Click the Add Buildfiles with Search button. Suppose you only remember 
     that the buildfile you want to work with starts with 'H'. Enter 'H*.xml' for 
-    the build file name. Make sure Workspace is selected for the scope, then click 
+    the buildfile name. Make sure Workspace is selected for the scope, then click 
     Search. The HelloWorld.xml file is found and placed in the Ant view.</li>
   <li>Expand the top-level entry to see the default target Hello, and the sub-target 
     World.<br>
     <img src="../images/Image618_ant_view.gif" alt="Ant view" border="0" width="146" height="152"> </li>
   <li>Select the World sub-target and click the Play button. Notice that just the 
     World sub-target gets executed. </li>
-  <li>Select the top-level HelloWorld build file and click Play. Notice that just 
+  <li>Select the top-level HelloWorld buildfile and click Play. Notice that just 
     the default target, Hello, gets executed.</li>
   <li>To edit your buildfile, bring up the context menu on the HelloWorld file and 
     select <b>Open With &gt; Ant Editor</b>.</li>
