*** empty log message ***

--- a/bundles/org.eclipse.platform.doc.user/concepts/accessibility/fontsandcolors.htm
+++ b/bundles/org.eclipse.platform.doc.user/concepts/accessibility/fontsandcolors.htm
@@ -45,8 +45,8 @@ colors and fonts provide in Eclipse.&nbsp;</p>
 </ul>
 <h2>Colors</h2>
 <p>Eclipse uses colors as an information enhancement in many places. Whenever
-possible the operating system color settings are used but in cases where the
-operating system settings are not enough Eclipse defines other colors. All of
+possible the operating system color settings are used, but in cases where the
+operating system settings are not enough, Eclipse defines other colors. All of
 these colors can be adjusted via the following preference pages:</p>
 <ul>
   <li><b>Workbench &gt; Appearance</b> (Error text, hyperlink text, active hyperlink
