--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-36b.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-36b.htm
@@ -24,26 +24,35 @@ view.&nbsp;</p>
 <ol>
 	<li>The title of the Search view provides us with a description of the search we just performed. If the view is too narrow to display the full description, hover over the title of the Search view. Observe that hover help appears and provides the full description.<blockquote><img src="../images/Image51_search_hover.gif" alt="Search view" border="0" width="353" height="88"></blockquote></li>
 	<li>Click the Show Next Match button <img src="../images/Image51_search_next.gif" alt="Show next match button" border="0" width="21" height="19"> to navigate to the first match of the search expression (&quot;it&quot;).
-		<br>Notice that the file JanesText.txt is automatically selected and opened in the editor area.
-		<br>Click Show Next Match button two more times. Once again the Search view automatically opens the file.</li>
+		<br>
+    Notice that the file JanesFile.txt is automatically selected and opened in 
+    the editor area. <br>
+    Click Show Next Match button two more times. Once again the Search view automatically 
+    opens the file (JanesText.txt).</li>
 	<li>It is sometimes useful to remove uninteresting matches from the search results. The Search view's popup menu provides two ways to remove matches:
 		<ul>
 			<li><b>Remove Current Match</b> - Removes the actual match that you are currently looking at. If a file contains multiple matches, as in our case, only the current match is removed.</li>
-			<li><b>Remove Selected Match</b> - Removes the file entry and all matches in it.</li>
+			
+      <li><b>Remove Selected Matches</b> - Removes the file entry and all matches 
+        in it.</li>
 		</ul>
 	</li>
-	<li>Choose <b>Remove Current Match</b> from the popup. Notice how JanesFile.txt only has one match left.</li>
-	<li>Select JanesText.txt in the Search view.</li>
-	<li>Choose <b>Remove Selected Match</b> from the popup menu. 
-		<br>The Search view now shows only one match for JanesFile.txt 
+	
+  <li>Choose <b>Remove Current Match</b> from the popup. Notice how JanesText.txt 
+    only has one match left.</li>
+  <li>Select JanesFile.txt in the Search view.</li>
+	
+  <li>Choose <b>Remove Selected Matches</b> from the popup menu. <br>
+    The Search view now shows only one match for JanesText.txt 
     <blockquote><img src="../images/Image51_search_reduced.gif" alt="Search view" border="0" width="253" height="154"></blockquote>
   </li>
-	<li>Perform a second search for &quot;that&quot; by clicking on the Search button <img src="../images/Image50_search.gif" alt="Search button" border="0" width="26" height="22"> in the Workbench's toolbar.</li>
+	<li>Perform a second search for &quot;that&quot; by clicking on the Search button <img src="../../../../../0317/eclipse/workspace/org.eclipse.platform.doc.user/images/Image50_search.gif" alt="Search button" border="0" width="26" height="22"> in the Workbench's toolbar.</li>
 	<li>The Search view updates to show the results of the new search.
 		<br>
     You can move back and forth between your two search results using the drop 
     down button on the Search view's toolbar. 
-    <blockquote><img src="../images/Image51_search_switching.gif" alt="Search view" border="0" width="356" height="154"></p></blockquote></li>
+    <blockquote><img src="../images/Image51_search_switching.gif" alt="Search view" border="0" width="356" height="154"></p></blockquote>
+  </li>
 	<li>In the drop down button choose &quot;it&quot; - 1 Occurrence. The Search view switches back to show you the original search. On the context menu choose <b>Search Again</b> to repeat the initial search. Notice that once again we have four matches.</li>
 </ol>
 
