Toc title <-> page titles

--- a/bundles/org.eclipse.jdt.doc.user/concepts/cquickfix.htm
+++ b/bundles/org.eclipse.jdt.doc.user/concepts/cquickfix.htm
@@ -5,11 +5,11 @@
     <meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1">
     <link rel="stylesheet" href="../book.css" charset="ISO-8859-1" type="text/css">
 
-    <title>Available Quick Fix Proposals</title>
+    <title>Quick Fix</title>
   </head>
 
   <body>
-    <h1>Available Quick Fix Proposals</h1>
+    <h1>Quick Fix</h1>
 
     <p>The Java editor offers corrections to problems found while typing and after compiling. To show that
     correction proposals are available for a problem or warning, a 'light bulb' is visible on the editor's annotation bar.<br>
