--- a/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-4.htm
+++ b/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-4.htm
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>
-      Browsing Java elements with the Package Explorer
+      Browsing Java Elements using the Package Explorer
     </title>
     <link rel="stylesheet" href="../book.css" charset="ISO-8859-1" type="text/css">
     <meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1">
@@ -10,7 +10,7 @@
   </head>
   <body>
     <h1>
-      Browsing Java elements with the package explorer
+      Browsing Java elements using the package explorer
     </h1>
     <p>
       In this section, you will browse Java elements within the JUnit project.
