--- a/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-LocalHistory.htm
+++ b/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-LocalHistory.htm
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>
-      Replacing and restoring a method from the local history
+      Using the Local History
     </title>
     <link rel="stylesheet" href="../book.css" charset="ISO-8859-1" type="text/css">
     <meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1">
@@ -10,7 +10,7 @@
   </head>
   <body>
     <h1>
-      Replacing and restoring a method from the local history
+      Using the local history
     </h1>
     <p>
       In this section, you will use the local history feature to switch to a previously saved version of an individual 
