--- a/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-Navigate.htm
+++ b/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-Navigate.htm
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>
-      Navigate via open declaration and open on type hierarchy
+      Navigate to a Java Element's Declaration
     </title>
     <link rel="stylesheet" href="../book.css" charset="ISO-8859-1" type="text/css">
     <meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1">
@@ -10,7 +10,7 @@
   </head>
   <body>
     <h1>
-      Navigate via open declaration and open on type hierarchy
+      Navigate to a Java element's declaration
     </h1>
     
 	<ol>
