--- a/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-OrganizeImports.htm
+++ b/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-OrganizeImports.htm
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>
-      Organizing imports
+      Organizing Import Statements
     </title>
     <link rel="stylesheet" href="../book.css" charset="ISO-8859-1" type="text/css">
     <meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1">
@@ -10,7 +10,7 @@
   </head>
   <body>
     <h1>
-      Organizing imports
+      Organizing import statements
     </h1>
     <p>
       In this section you will organize the import declarations in your
