--- a/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-ProjectConfiguration.htm
+++ b/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-ProjectConfiguration.htm
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>
-      Java project configuration tutorial
+      Project Configuration Tutorial
     </title>
     <link rel="stylesheet" href="../book.css" charset="ISO-8859-1" type="text/css">
     <meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1">
@@ -10,7 +10,7 @@
   </head>
   <body>
     <h1>
-    	Java project configuration tutorial
+    	Project configuration tutorial
     </h1>
     <p>
     	In this section, you will create and configure a new Java project to use source folders and 
