--- a/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-junit.htm
+++ b/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-junit.htm
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>
-      Implementing and running JUnit tests
+      Implementing and running JUnit Tests
     </title>
     <link rel="stylesheet" href="../book.css" charset="ISO-8859-1" type="text/css">
     <meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1">
@@ -10,7 +10,7 @@
   </head>
   <body>
     <h1>
-      Writing and Running JUnit Tests
+      Writing and running JUnit tests
     </h1>
     <p>
       In this section, you will be using the <a href="http://www.junit.org"> JUnit</a> 
