--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-10.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-10.htm
@@ -10,7 +10,7 @@
   </head>
   <body>
     <h1>
-      Changing the appearance of the Console view
+      Changing the appearance of the console view
     </h1>
     <p>
       To set the types of output (and their colors) in the Console view:
