--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-191.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-191.htm
@@ -2,14 +2,14 @@
 
 <html>
   <head>
-    <title>Showing and hiding members in Java views</title>
+    <title>Showing and hiding members</title>
     <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
     <meta http-equiv="Content-Style-Type" content="text/css">
     <link rel="stylesheet" href="../book.css" charset="ISO-8859-1" type="text/css">
   </head>
 
   <body>
-    <h1>Showing and hiding members in Java views</h1>
+    <h1>Showing and hiding members</h1>
 
     <p>Several Java views (e.g. Outline, Package Explorer, Members) offer filtering of members (fields, types and methods). The filters are available as toolbar
     buttons or as view menu items, depending on the view. There are
