--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-193.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-193.htm
@@ -2,14 +2,14 @@
 
 <html>
   <head>
-    <title>Showing and hiding method return types in Java views</title>
+    <title>Showing and hiding method return types</title>
     <link rel="stylesheet" href="../book.css" charset="ISO-8859-1" type="text/css">
     <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
     <meta http-equiv="Content-Style-Type" content="text/css">
   </head>
 
   <body>
-    <h1>Showing and hiding method return types in Java views</h1>
+    <h1>Showing and hiding method return types</h1>
 
     <p>Several Java views (e.g. Outline, Members) present methods and can also show their return types.</p>
 
