--- a/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-ExtractMethod.htm
+++ b/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-ExtractMethod.htm
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>
-      Extract a method
+      Extract a new Method
     </title>
     <link rel="stylesheet" href="../book.css" charset="ISO-8859-1" type="text/css">
     <meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1">
@@ -10,7 +10,7 @@
   </head>
   <body>
     <h1>
-      Extract a method
+      Extract a new method
     </h1>
     <p>
       In this section, you will improve the code of the constructor of <em>junit.framework.TestSuite</em>. 
