--- a/bundles/org.eclipse.platform.doc.user/tasks/tasks-46.htm
+++ b/bundles/org.eclipse.platform.doc.user/tasks/tasks-46.htm
@@ -35,7 +35,7 @@ editor for that type of file. To open it in a different editor, select
 <p><img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27"><br>
 <a href="tasks-51.htm">Associating editors with file types</a><br>
 <a href="tasks-52.htm">Editing files outside the Workbench</a><br>
-<a href="tasks-18.htm">Linking from the Navigator view to the active editor</a><br>
+  <a href="tasks-18.htm">Linking the Navigator view to the active editor</a><br>
 <a href="tasks-3g.htm">Tiling editors</a><br>
 <a href="tasks-9.htm">Changing the placement of editor tabs</a><br>
 <a href="tasks-68.htm">Comparing resources</a>
