--- a/bundles/org.eclipse.platform.doc.user/tasks/tasks-51.htm
+++ b/bundles/org.eclipse.platform.doc.user/tasks/tasks-51.htm
@@ -52,8 +52,7 @@ Navigator view.
 <p><img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27"><br>
 <a href="tasks-46.htm">Opening files for editing</a><br>
 <a href="tasks-52.htm">Editing files outside the Workbench</a><br>
-<a href="tasks-18.htm">Linking from the Navigator view to the active editor</a>
-</p>
+  <a href="tasks-18.htm">Linking the Navigator view to the active editor</a> </p>
 
 <p>&nbsp;<br>
 <a href="../hglegal2003.htm"><img src = "../images/ngibmcpy2003.gif" alt="Copyright IBM Corporation and others 2000, 2003" border="0" width="324" height="14"></a>
