--- a/bundles/org.eclipse.platform.doc.user/concepts/concepts-25.htm
+++ b/bundles/org.eclipse.platform.doc.user/concepts/concepts-25.htm
@@ -28,29 +28,29 @@ plug-ins from special web based Eclipse update sites.</p>
 <p>The basic underlying mechanism of the update manager is simple: the files for a feature or
 plug-in are always stored in a sub-directory whose name includes a version
 identifier (e.g., &quot;2.0.0&quot;). Different versions of a feature or plug-in
-are always given different version identifiers, thereby ensuring that the
+are always given different version identifiers, thereby ensuring that 
 multiple versions of the same feature or plug-in can co-exist on
 disk. This means that installing or updating features and plug-ins requires
 adding more files, but never requires deleting or overwriting existing files.
 Once the files are installed on the local computer, the new feature and plug-in
 versions are available to be configured. The same installed base of files is
 therefore capable of supporting many different <em>configurations</em>
-simultaneously; installing and upgrading an existing product are reduced to
-formulating a configuration incrementally newer than the current one. Important
+simultaneously; installing and upgrading an existing product is reduced to
+formulating a configuration that is incrementally newer than the current one. Important
 configurations can be saved and restored to active service in the
 event of an unsuccessful upgrade.</p>
 
-<p>Large Eclipse based products can organize its features into trees starting
+<p>Large Eclipse based products can organize their features into trees starting
 from the root feature that represents the entire product. This root feature then
 includes smaller units of functionality all the way down to leaf features that
 list one or more plug-ins and fragments. The capability to group feature
-hierarchically allows products to be stacked using 'Russian doll' approach - a
+hierarchically allows products to be stacked using a 'Russian doll' approach - a
 large product can build on top of a smaller one by including it and adding more
 features.</p>
 
-<p>Some included features may not be useful add-ons but not vital to the proper
+<p>Some included features may be useful add-ons but not vital to the proper
 functioning of the overall product. Feature providers can elect to mark them as <b>optional</b>.
-When installing optional features, users are provided with a choice over whether
+When installing optional features, users are provided with a choice of whether
 they want them or not. If not installed right away, optional features can be
 added at a later date.</p>
 
