Linked resource doc

--- a/bundles/org.eclipse.platform.doc.user/tasks/tasks-45.htm
+++ b/bundles/org.eclipse.platform.doc.user/tasks/tasks-45.htm
@@ -51,11 +51,11 @@ above:
   by the path variable, then click <b>OK</b>.</li>
   <li>Click <b>Finish</b>.</li>
 </ol>
-</P>
 <p><em>Tip:</em> The <b>Window &gt; Preferences &gt; Workbench &gt; Linked Resources 
 </b> preference page also allows you to define path variables.
 </p>
-
+<P>Note that, once you create a linked resource you will not be able to change
+the link target path that you entered in step 6. or 8. above.</P>
 <P><img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27"><br>
 <a href="../concepts/concepts-12.htm">Resources</a><br>
 <a href="../concepts/concepts-17.htm">Resource hierarchies</a><br>
@@ -69,8 +69,9 @@ above:
 </P>
 
 <p><img border="0" src="../images/ngrelr.gif" alt="Related references" width="159" height="27">
-<br>
-  <a href="../reference/ref-14b.htm">Linked resources</a> 
+<br><a href="../reference/ref-14b.htm">Linked resources</a> 
+<br><a href="../reference/ref-38.htm">New Folder wizard</a> 
+<br><a href="../reference/ref-39.htm">New File wizard</a> 
 </p>
 
 <P>&nbsp;<br>
