fix console image

--- a/bundles/org.eclipse.jdt.doc.user/tips/jdt_tips.html
+++ b/bundles/org.eclipse.jdt.doc.user/tips/jdt_tips.html
@@ -872,11 +872,12 @@
 		<tr>
 			<td valign="top" align="right"><b>Controlling<br>
 			your console</b></td>
-			<td valign="top" align="left">Output displayed in the console can be
-			locked to a specific process via a drop-down menu in the Console view
-			toolbar. There's also a new scroll lock button that stops the console
-			from automatically scrolling as new output is appended.
-			<p><img src="images/selective-output.gif" width=459 height=140 alt="Console view"></p>
+			
+    <td valign="top" align="left">Output displayed in the console can be locked 
+      to a specific process via a drop-down menu in the Console view toolbar. 
+      There's also a new scroll lock button that stops the console from automatically 
+      scrolling as new output is appended. 
+      <p><img src="images/selective-output.gif" alt="Console view with process drop-down" width="409" height="151"></p>
 			</td>
 		</tr>
 		<tr>
