Replaced Ant "sub-target" with "subtarget"

--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-85a_ant_view.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-85a_ant_view.htm
@@ -12,7 +12,7 @@
   
 <P CLASS="Para">Eclipse provides a standard view, the Ant view, that lets you 
   work with your Ant buildfiles. This view is tree-structured, showing Ant buildfiles 
-  as top-level entries and targets &amp; sub-targets as children. The main advantage 
+  as top-level entries and targets &amp; subtargets as children. The main advantage 
   of this view is that you can work with all of your Ant buildfiles in one place, 
   as opposed to hunting them down in the Navigator.</P>
 <ol>
@@ -33,11 +33,11 @@
     that the buildfile you want to work with starts with 'H'. Enter 'H*.xml' for 
     the buildfile name. Make sure Workspace is selected for the scope, then click 
     Search. The HelloWorld.xml file is found and placed in the Ant view.</li>
-  <li>Expand the top-level entry to see the default target Hello, and the sub-target 
+  <li>Expand the top-level entry to see the default target Hello, and the subtarget 
     World.<br>
     <img src="../images/Image618_ant_view.gif" alt="Ant view" border="0" width="146" height="152"> </li>
-  <li>Select the World sub-target and click the Play button. Notice that just the 
-    World sub-target gets executed. </li>
+  <li>Select the World subtarget and click the Play button. Notice that just the 
+    World subtarget gets executed. </li>
   <li>Select the top-level HelloWorld buildfile and click Play. Notice that just 
     the default target, Hello, gets executed.</li>
   <li>To edit your buildfile, bring up the context menu on the HelloWorld file and 
@@ -47,7 +47,7 @@
   <li>The Run Ant dialog appears. Here you can modify the way in which the buildfile 
     is run from the Ant view. Note that the choice and order of targets is ignored 
     when running from the Ant view. If the top-level file is selected, just the 
-    default target is run and if one of the targets or sub-targets is selected, 
+    default target is run and if one of the targets or subtargets is selected, 
     just that target is run. It is not possible to run multiple targets from the 
     Ant view.</li>
   <li>Select the HelloWorld file, then click the Remove button. The buildfile is 
