--- a/bundles/org.eclipse.platform.doc.user/tasks/tasks-18.htm
+++ b/bundles/org.eclipse.platform.doc.user/tasks/tasks-18.htm
@@ -17,7 +17,7 @@
 
 <ol>
   <li>From the Navigator menu, select <b>Link With Editor.</b></li>
-  <li>Ckick on the Link With Editor icon <img src="../images/synced.gif" width="16" height="16">on 
+  <li>Ckick on the Link With Editor icon <img src="../images/synced.gif" alt="Link with editor icon" width="16" height="16">on 
     the Navigator bar.</li>
 </ol>
 
