--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-35.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-35.htm
@@ -32,8 +32,7 @@ look like this:</p>
           There is not much else<br>
           we can really say about it other<br>
           than it has five lines of<br>
-          text that are rather dull.<br>
-          This is a 6th line</i></P>
+          text that are rather dull.</i></P>
         </blockquote>
       </li>
   <li>
