Revamp updating ws section

--- a/maps/org.eclipse.releng/readmes/readme_eclipse.html
+++ b/maps/org.eclipse.releng/readmes/readme_eclipse.html
@@ -1196,7 +1196,7 @@ file is created with the initial content, which includes the property 'bin.inclu
 listing the plug-in manifest and its code JARs. However, it omits mention of
 other files created by the template, such as the <code>icons/</code> folder. As
 a request, these extra files do not end up in the plug-in when built using Ant
-buildfile or exported using 'Export deployable plug-ins and fragments' wizard.
+build file or exported using 'Export deployable plug-ins and fragments' wizard.
 To work around this problem, add these files and directories manually in
 build.properties file. (bug <a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=35554">35554</a>)</p>
 <h4>Emacs key bindings do not work in manifest editor fields</h4>
@@ -1275,11 +1275,19 @@ analogous.</p>
 subdirectory as a sibling of the executable (that is, at, <code>c:\eclipse-SDK-2.1-win32\eclipse\workspace</code>).
 This workspace directory is used as the default content area for your projects
 as well as for holding any required metadata. For shared or multi-workspace
-installs you must explicitly specify the location for your workspace using the -data command line
+installs you must explicitly specify the location for your workspace using the
+&quot;<code>-data</code>&quot; command line
 argument; for example,&nbsp;</p>
 <blockquote>
-  <p><code>eclipse -data c:\myworkspace</code></p>
+  <p><code>eclipse -data c:\myworkspace -vm c:\jdk1.4.1_01\jre\bin\javaw</code></p>
 </blockquote>
+<p><i>Tip:</i> It's generally a good idea to explicitly specify which Java VM to
+use when running Eclipse.  This is achieved with the &quot;<code>-vm</code>&quot; command line
+argument as illustrated above.  If you don't use &quot;<code>-vm</code>&quot;, Eclipse will look
+on the O/S path.  When you install other Java-based products, they may change your
+path and could result
+in a different Java VM being used when you next launch Eclipse.
+</p>
 <p>To create a Windows shortcut to an installed Eclipse and a particular
 workspace (e.g., <code>c:\myworkspace</code>):</p>
 <ol>
@@ -1292,18 +1300,21 @@ workspace (e.g., <code>c:\myworkspace</code>):</p>
 <p>Opening this shortcut launches Eclipse on the specified workspace. (You can
 drag the shortcut to the Windows Desktop if you want to keep it in easy reach.)</p>
 
-<h2>5. <a name="Upgrading"></a>Upgrading a Workspace from a Previous Release</h2>
+<h2>5. <a name="Upgrading"></a>Upgrading Workspace from a Previous Release</h2>
 <p>
 If you are upgrading to a newer release of Eclipse from an older release, there are
 simple steps to follow to migrate your workspace to the new release.  Your workspace
-is the directory on disk that contains all of your project files, as well as meta-data such
+is the directory on disk that contains all of your project files, as well as
+metadata such
 as preferences you may have customized.  The steps to follow for upgrading depend on
-whether or not you used the &quot;-data&quot; command line argument when starting 
-Eclipse.  The &quot;-data&quot; argument is recommended because it clearly specifies the 
+whether or not you used the &quot;<code>-data</code>&quot; command line argument when starting 
+Eclipse.  The &quot;<code>-data</code>&quot; argument is recommended because it clearly specifies the 
 location of your workspace.  If this argument is not used, Eclipse will place the workspace
 in the current working directory at the time Eclipse was launched.
 </p>
-<p><i>Tip:</i> It doesn't hurt to make a backup of your workspace before
+<p>Note that if you installed additional features and plug-ins into your older Eclipse, you
+should re-install them in the new Eclipse prior to upgrading workspaces.
+<p><i>Tip:</i> It doesn't hurt to make a backup copy of your workspace before
 upgrading.  After you've upgraded your workspace, you won't be able to use it
 again with an older version of Eclipse.  If you ever want to go &quot;back in time&quot;
 to an earlier release, you'll need that backup!
@@ -1314,66 +1325,27 @@ If you weren't previously using &quot;-data&quot; to specify your workspace, fol
 these steps to upgrade:
 <ol>
 <li>Find the workspace directory used by your old version of Eclipse.  Typically this
-is located inside the eclipse install directory in a sub-directory called &quot;workspace&quot;.
-If you were using a shortcut or script to launch Eclipse, then it will be under the current
-working directory of that shortcut or script in a sub-directory called &quot;workspace&quot;.
-Windows users, this is specified by the &quot;Start in&quot; argument in your shortcut properties.</li>
-<li>Copy this workspace directory into a new, empty location outside of any Eclipse
+is located inside the directory in which Eclipse was installed in a subdirectory called &quot;<code>workspace</code>&quot;.
+If you are using a shortcut or script to launch Eclipse, then it will be under the current
+working directory of that shortcut or script in a subdirectory called &quot;workspace&quot;.
+  For Windows users, this is specified by the Start in: argument in your shortcut properties.</li>
+<li>Copy this workspace directory to a new, empty location outside of any Eclipse
 install directory.</li>
 <li>Install the new version of Eclipse in a new location, separate from any old version
 of Eclipse.</li>
-<li>Start this new version of Eclipse, using the &quot;-data&quot; command line argument to 
+<li>Start this new version of Eclipse, using the &quot;<code>-data</code>&quot; command line argument to 
 point to the workspace location.</li>
 </ol>
-<p>
-Example:<br><br>
-Old Eclipse install directory: <br>
-&nbsp;&nbsp;&nbsp;<code>c:\eclipse2_0</code><br><br>
-New Eclipse install directory: <br>
-&nbsp;&nbsp;&nbsp;<code>c:\eclipse2_1</code><br><br>
-Workspace location: <br>
-&nbsp;&nbsp;&nbsp;<code>c:\data\EclipseWorkspace</code><br><br>
-Java VM location: <br>
-&nbsp;&nbsp;&nbsp;<code>c:\jre</code><br><br>
-Command line to start Eclipse: <br>
-&nbsp;&nbsp;&nbsp;<code>&quot;c:\eclipse2_1 -data c:\data\EclipseWorkspace -vm d:\jre\bin\javaw&quot;</code><br>
-</p>
-<p><i>Tip:</i> It's generally a good idea to explicitly specify which Java VM to
-use when running Eclipse.  This is achieved with the &quot;-vm&quot; command line
-argument as illustrated above.  If you don't use &quot;-vm&quot;, Eclipse will look
-on the O/S path.  When you install other products, they may change your path, resulting
-in a different Java VM being used when you next launch Eclipse.
-</p>
 <h3>Users who do use &quot;-data&quot;</h3>
 <p>
-If you were previously using the &quot;-data&quot; argument to start Eclipse, your 
+If you were previously using the &quot;<code>-data</code>&quot; argument to start Eclipse, your 
 upgrade path is much easier:
 <ol>
-<li>Install the new version of Eclipse in a new location, separate from any old version
+<li>Install the new version of Eclipse in a new location, separate from any old versions
 of Eclipse.</li>
-<li>Start this new version of Eclipse, using the &quot;-data&quot; command line argument to 
+<li>Start this new version of Eclipse, using the &quot;<code>-data</code>&quot; command line argument to 
 point to your old workspace location.</li>
 </ol>
-See the example in the previous section for an illustration.
-<h3>Adding third party plug-ins</h3>
-<p>
-If you have installed extra plug-ins in your Eclipse environment, you will need to add
-these new plug-ins to each new build or version of Eclipse you install.  Before you do
-this, refer to the documentation for those plug-ins to ensure they are compatible
-with the version of Eclipse you are moving to.  There are several ways to add these
-extra plug-ins to your new Eclipse install:
-<ol>
-<li>Copy the directories for each plug-in into the &quot;plugins&quot; directory of your
-new Eclipse version.</li>
-<li>Use an Eclipse update site to re-install those extra plug-ins or features in the
-new version of Eclipse.</li>
-<li>If you are using product extensions, simply copy the &quot;links&quot; directory
-into the new Eclipse version install directory.  For more details on product extensions,
-see the documentation in the Platform Plug-in Developer Guide, under <b>Programmer's
-Guide &gt; Packaging and delivering Eclipse based products &gt; Product extensions</b>.</li>
-</ol>
-
-
 <h2>6. <a name="Interoperability with Previous Releases">Interoperability with
 Previous Releases</a></h2>
 <h3>6.1 Interoperability of Release 2.1 and 2.0</h3>
