--- a/bundles/org.eclipse.platform.doc.isv/guide/ant_contributing_task.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/ant_contributing_task.htm
@@ -38,7 +38,7 @@ in the <b>plugin.xml</b> file.</p>
 <A NAME="monitor"></A><h3>
 Progress Monitors</h3>
 <P >
-The Eclipse Ant support provides access to a <a href="../reference/api/org/eclipse/core/runtime/IProgressMonitor.html">
+The Eclipse Ant support provides access to an <a href="../reference/api/org/eclipse/core/runtime/IProgressMonitor.html">
 <b>
 IProgressMonitor</b></a> if one is passed when invoking the AntRunner. One of the advantages of having access to a progress
 monitor is that a long-running task can check to see if the user has requested its cancellation. The progress
@@ -46,7 +46,7 @@ monitor object is obtained from the Ant project's references.&nbsp; Note that a 
 the method <a href="../reference/api/org/eclipse/ant/core/AntRunner.html#run(org.eclipse.core.runtime.IProgressMonitor)">
 <b>
 AntRunner.run(IProgressMonitor)</b></a> was called with a valid progress monitor. The following code snippet
-shows how to obtain a progress monitor from the task's project.
+shows how to obtain a progress monitor from the task's project:
 </P>
 <pre ><font color="#4444CC">import org.apache.tools.ant.BuildException;
 import org.apache.tools.ant.Task;
@@ -89,14 +89,14 @@ The following should work as a checklist for plug-in developers:</p>
 There are basically two requirements for running Ant in Eclipse that do not fit
 the plug-in model very well:
 <ul>
-  <li>Change the Ant classpath at runtime.</li>
-  <li>Change the Ant version at runtime.</li>
+  <li>Change the Ant classpath at runtime</li>
+  <li>Change the Ant version at runtime</li>
 </ul>
 <p>
 During runtime plug-in classloaders cannot have their classpaths expanded and
 plug-ins cannot change their dependencies. At the same time having separate
 JARs for the tasks and types is a good isolation from the plug-in classloading
-mechanism, having these extra JARs declared by a plug-in permits adding the
+mechanism. Having these extra JARs declared by a plug-in permits adding the
 contributing plug-in to the Ant classpath as well.
 </p>
 
