Update screen sizes

--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-62c_releasing.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-62c_releasing.htm
@@ -20,8 +20,7 @@ ahead and commit the work we have done.
 <P CLASS="Para">
 In the <b>Structure Compare</b> list select file1.txt</P>.
 <blockquote>
-<P CLASS="Para">
-<img src="../images/Image82_repo_release.gif" alt="Structure Compare" border="0" width="380" height="165"></P>
+      <P CLASS="Para"> <img src="../images/Image82_repo_release.gif" alt="Structure Compare" border="0" width="348" height="148"></P>
 </blockquote>
   </li>
   <li>
@@ -30,7 +29,7 @@ In the <b>Structure Compare</b> list select file1.txt</P>.
   </li>
   <li>Observe that file1.txt is no longer in the list.
 <blockquote>
-  <p><img src="../images/Image82_repo_release2.gif" alt="Structure Compare" border="0" width="384" height="167"></p>
+      <p><img src="../images/Image82_repo_release2.gif" alt="Structure Compare" border="0" width="339" height="147"></p>
 </blockquote>
   <p>In addition to committing individual resources we can also select
 the project and commit all of the changes in the project.</p>
@@ -45,7 +44,7 @@ structure compare list is now empty.&nbsp;</p>
 the window).
 <blockquote>
   <blockquote>
-    <p><img src="../images/Image82_repo_res.gif" alt="Resource Perspective" border="0" width="135" height="165"></p>
+        <p><img src="../images/Image82_repo_res.gif" alt="Resource Perspective" border="0" width="324" height="79"></p>
   </blockquote>
 </blockquote>
   </li>
@@ -61,7 +60,7 @@ Repository</b> again from the context menu.
 <p>When the
 Synchronize view opens, there is only one change, the new file3.txt.</p>
 <blockquote>
-  <p><img src="../images/Image82_repo_rel5.gif" alt="Outgoing mode" border="0" width="402" height="123"></p>
+      <p><img src="../images/Image82_repo_rel5.gif" alt="Outgoing mode" border="0" width="339" height="108"></p>
 </blockquote>
   </li>
   <li>Select file3.txt, and choose <b>Commit</b> from the context menu. </li>
