--- a/bundles/org.eclipse.platform.doc.isv/guide/debug_launch_uiimages.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/debug_launch_uiimages.htm
@@ -23,8 +23,8 @@ configuration type.</p>
 		icon=&quot;icons/full/ctool16/java_app.gif&quot;&gt;
 	&lt;/launchConfigurationTypeImage&gt;	
 &lt;/extension&gt;</font></pre>
-<p>Note that in 2.1, to maintain consistency with other extension points that 
-  reference launch configuration types, the <b>configTypeID</b>
+<p>In order to maintain consistency with other extension points that 
+  reference launch configuration types, please note that in 2.1 the <b>configTypeID</b>
   attribute may also be specified as <b>type</b>.</p>
 <p><a href="../hglegal.htm"><img border="0" src="../ngibmcpy.gif" alt="Copyright IBM Corporation and others 2000, 2003." border="0" width="324" height="14"></a></p>
 </BODY>
