--- a/bundles/org.eclipse.platform.doc.isv/guide/debug_model.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/debug_model.htm
@@ -49,18 +49,18 @@ are common behaviors among debug artifacts.&nbsp; These interfaces are
 implemented by debug elements where appropriate.&nbsp; They include the
 following actions:</p>
 <ul>
-  <li>disconnect (<a href="../reference/api/org/eclipse/debug/core/model/IDisconnect.html"><b>IDisconnect</b></a>) 
+  <li>Disconnect (<a href="../reference/api/org/eclipse/debug/core/model/IDisconnect.html"><b>IDisconnect</b></a>) 
     - the ability to end a debug session with a target program and allow the target 
     to continue running</li>
-  <li>step (<a href="../reference/api/org/eclipse/debug/core/model/IStep.html"><b>IStep</b></a>) 
+  <li>Step (<a href="../reference/api/org/eclipse/debug/core/model/IStep.html"><b>IStep</b></a>) 
     - the ability to step into, over, and return from the current execution point</li>
-  <li>filtered step (<a href="../reference/api/org/eclipse/debug/core/model/IFilteredStep.html"><b>IFilteredStep</b></a>) 
+  <li>Filtered step (<a href="../reference/api/org/eclipse/debug/core/model/IFilteredStep.html"><b>IFilteredStep</b></a>) 
     - the ability to step with a set of filters applied to the operation</li>
-  <li>suspend and resume (<a href="../reference/api/org/eclipse/debug/core/model/ISuspendResume.html"><b>ISuspendResume</b></a>) 
+  <li>Suspend and resume (<a href="../reference/api/org/eclipse/debug/core/model/ISuspendResume.html"><b>ISuspendResume</b></a>) 
     - the ability to suspend and resume execution</li>
-  <li>terminate (<a href="../reference/api/org/eclipse/debug/core/model/ITerminate.html"><b>ITerminate</b></a>) 
+  <li>Terminate (<a href="../reference/api/org/eclipse/debug/core/model/ITerminate.html"><b>ITerminate</b></a>) 
     - the ability to terminate an execution context</li>
-  <li>modify a value (<a href="../reference/api/org/eclipse/debug/core/model/IValueModification.html"><b>IValueModification</b></a>) 
+  <li>Modify a value (<a href="../reference/api/org/eclipse/debug/core/model/IValueModification.html"><b>IValueModification</b></a>) 
     - the ability to modify the value of a variable</li>
 </ul>
 <p>If you look at the definitions for the platform debug elements, you will see
