--- a/bundles/org.eclipse.platform.doc.isv/guide/debug_ui.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/debug_ui.htm
@@ -15,24 +15,24 @@ for building debugger user interfaces.</p>
 <p><a href="../reference/api/org/eclipse/debug/ui/DebugUITools.html"><b>DebugUITools</b></a>
 implements function commonly used by debug user interfaces:</p>
 <ul>
-  <li>storage and retrieval of images on behalf of debug UI clients</li>
-  <li>lookup of debug model presentations associated with a given debug model</li>
-  <li>retrieval of the debug plug-in preference store</li>
-  <li>information about the current debug view in the workbench</li>
-  <li>information about the current program under debug</li>
-  <li>opening the launch configuration dialog</li>
+  <li>Storage and retrieval of images on behalf of debug UI clients</li>
+  <li>Lookup of debug model presentations associated with a given debug model</li>
+  <li>Retrieval of the debug plug-in preference store</li>
+  <li>Information about the current debug view in the workbench</li>
+  <li>Information about the current program under debug</li>
+  <li>Opening the launch configuration dialog</li>
 </ul>
 <p><a href="../reference/api/org/eclipse/debug/ui/IDebugView.html"><b>IDebugView</b></a>
 provides common function for debug views.&nbsp; It provides access to an
 underlying viewer and its debug model presentation.&nbsp; Typically, clients
 should extend <a href="../reference/api/org/eclipse/debug/ui/AbstractDebugView.html"><b>AbstractDebugView</b></a>
 rather than implement the interface from scratch.&nbsp; <a href="../reference/api/org/eclipse/debug/ui/AbstractDebugView.html"><b>AbstractDebugView</b></a>
-provides additional common function:</p>
+provides additional common functions:</p>
 <ul>
-  <li>storage of actions in an action registry</li>
-  <li>generic handling of the underlying viewer's context menu</li>
-  <li>general implementations of delete key and double click function </li>
-  <li>mechanism for displaying an error message in the view</li>
+  <li>Storage of actions in an action registry</li>
+  <li>Generic handling of the underlying viewer's context menu</li>
+  <li>General implementations of delete key and double click function </li>
+  <li>Mechanism for displaying an error message in the view</li>
 </ul>
 <p>&nbsp;</p>
 <p><a href="../hglegal.htm"><img border="0" src="../ngibmcpy.gif" alt="Copyright IBM Corporation and others 2000, 2003." border="0" width="324" height="14"></a></p>
