Resource navigation action set

--- a/bundles/org.eclipse.platform.doc.user/tips/platform_tips.html
+++ b/bundles/org.eclipse.platform.doc.user/tips/platform_tips.html
@@ -75,11 +75,9 @@ productivity.</p>
   </tr>
   <tr>
     <td width="20%" valign="top" align="right"><b>Faster workspace navigation</b></td>
-    <td width="80%" valign="top" align="left">Whenever the resource Navigator
-      view is visible, <b>Navigate &gt; Open Resource</b>  (Ctrl+Shift+R) brings 
-      up a dialog that allow you to quickly locate and open an editor on any file 
-      in the workspace. In the same vein, <b>Navigate &gt; Go To &gt; Resource</b> 
-      expands and selects the resource in the Navigator view itself.</td>
+    <td width="80%" valign="top" align="left"><b>Navigate &gt; Open Resource</b> (Ctrl+Shift+R) brings up a dialog that allows you to quickly locate and
+      open an editor on any file in the workspace. In the same vein, <b>Navigate &gt; Go To &gt; Resource</b> expands and selects the resource in the Navigator view itself, if it has
+      focus.</td>
   </tr>
   <tr>
     <td width="20%" valign="top" align="right"><b>Tiling the editor work area</b></td>
@@ -361,7 +359,7 @@ productivity.</p>
   </tr>
   <tr>
     <td width="20%" valign="top" align="right"><b>Ant can find it</b></td>
-    <td width="80%" valign="top" align="left"> When the <b>Run > External Tools > Run As > Ant Build</b>
+    <td width="80%" valign="top" align="left"> When the <b>Run &gt; External Tools &gt; Run As &gt; Ant Build</b>
       launch shortcut is used, it searches for the buildfile
       to execute starting in the folder of the selected resource and working its way
       upwards (some will recognize this as Ant's "-find"
