*** empty log message ***

--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-61d_repolocb.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-61d_repolocb.htm
@@ -69,8 +69,7 @@ Note that the repository connection is only used to validate the information.</P
   </li>
   <li>
 <P CLASS="Para">Observe that the CVS Repositories view now shows the new repository location.</P>
-<P CLASS="Para">
-<img src="../images/Image82_repo_view1.gif" alt="CVS Repositories view" border="0" width="303" height="76"></P>
+    <P CLASS="Para"> <img src="../images/Image82_repo_view1.gif" alt="CVS Repositories view" border="0" width="295" height="50"></P>
   </li>
 </ol>
 
