Add tips and tricks to whatsnew

--- a/bundles/org.eclipse.platform.doc.user/whatsNew/platform_whatsnew.html
+++ b/bundles/org.eclipse.platform.doc.user/whatsNew/platform_whatsnew.html
@@ -20,6 +20,14 @@ Eclipse since 2.0:</p>
 
 <table border="1" cellpadding="10" cellspacing="0" width="600">
   <tr>
+    <td width="20%" valign="top" align="right"><b>Tips and tricks</b></td>
+    <td width="80%" valign="top" align="left">For some helpful ideas for 
+      increasing your productivity, use <b>Help &gt; Tips and Tricks</b>
+      then chose which page you are interested in.
+      <p><img border="0" src="images/tips-and-tricks.gif" width="350" height="272" alt="Tips and tricks selection dialog"></p>
+    </td>
+  </tr>
+  <tr>
     <td width="20%" valign="top" align="right"><b>User customizable<br>
       key bindings</b></td>
     <td width="80%" valign="top" align="left">You can now customize key bindings
