*** empty log message ***

--- a/bundles/org.eclipse.platform.doc.isv/guide/editors_actions.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/editors_actions.htm
@@ -51,7 +51,7 @@ at the markup where the Java example editor registers its editor.</p>
 <p>The first two actions are defined as retargetable text editor actions. The 
   principle is similar to the <a href="wrkAdv_retarget.htm">retargetable actions</a> 
   provided by the workbench. Retargetable text editor actions represent menu entries 
-  which the action contributer dynamically binds to corresponding actions provided 
+  which the action contributor dynamically binds to corresponding actions provided 
   by the active editor. When the active editor changes, the action to which a 
   retargetable text editor action is bound changes as well. The following snippet 
   shows that the editor action contributor finds the corresponding action by asking 
@@ -101,14 +101,14 @@ this method in <a href="../reference/api/org/eclipse/ui/texteditor/AbstractTextE
   by adding an action using only the id under which it is registered with the 
   editor.&nbsp; For example, the <b>JavaTextEditor</b> adds its actions for content 
   assistance to the menu when this method is called.&nbsp; Actions will not appear 
-  in the menu when no action is registered under the used id..</p>
+  in the menu when no action is registered under the used id.</p>
 <pre><font color="#4444CC">public void editorContextMenuAboutToShow(MenuManager menu) {
 	super.editorContextMenuAboutToShow(menu);
 	addAction(menu, &quot;ContentAssistProposal&quot;); 
 	addAction(menu, &quot;ContentAssistTip&quot;); 
 }</font></pre>
 <p>The superclass <a href="../reference/api/org/eclipse/ui/texteditor/TextEditor.html"><b>TextEditor</b></a> 
-  adds actions a second way - by also specifying a menu group in the context menu 
+  adds actions a second way - by specifying a menu group in the context menu 
   for placing the action.&nbsp; In this case the actions (<b>Shift Left</b>, <b>Shift 
   Right</b>) do appear in the context menu in the group defined by <a href="../reference/api/org/eclipse/ui/texteditor/AbstractTextEditor.html"><b>AbstractTextEditor</b></a>.</p>
 <pre><font color="#4444CC">protected void editorContextMenuAboutToShow(IMenuManager menu) {
