--- a/bundles/org.eclipse.platform.doc.isv/guide/editors_contentassist.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/editors_contentassist.htm
@@ -76,12 +76,12 @@ defines context information that can be requested by the user.&nbsp; Context
 information includes a description of the pieces of information available in a
 given context and the detailed information message.&nbsp;&nbsp;</p>
 <p>In the Java editor example, the information is not really contextual.&nbsp; 
-  An array containing 5 similar context information objects is computed for the 
+  An array containing five similar context information objects is computed for the 
   current offset when the user requests context info.&nbsp;All of these context 
-  information objects define a context that contains the 5 characters in front 
-  of the offset and the 5 after the offset. If any one of these 5 proposals is 
+  information objects define a context that contains the five characters in front 
+  of the offset and the five after the offset. If any one of these five proposals is 
   selected, the detailed information will appear near the cursor and will stay 
-  as long as the cursor is within the context of the 5 characters around the offset. 
+  as long as the cursor is within the context of the five characters around the offset. 
 </p>
 
 <pre><font color="#4444CC">public IContextInformation[] computeContextInformation(ITextViewer viewer, int documentOffset) {
