--- a/bundles/org.eclipse.platform.doc.isv/guide/editors_documents.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/editors_documents.htm
@@ -80,7 +80,7 @@ is created and set into the document.&nbsp;&nbsp;</p>
 	return document;
 }</font></pre>
 <p>The partitioner is responsible for dividing the document into non-overlapping 
-  regions, so called partitions.&nbsp; Partitions (represented at <a href="../reference/api/org/eclipse/jface/text/IDocumentPartitioner.html"><b>ITypedRegion</b></a>) 
+  regions called partitions.&nbsp; Partitions (represented at <a href="../reference/api/org/eclipse/jface/text/IDocumentPartitioner.html"><b>ITypedRegion</b></a>) 
   are useful for treating different sections of the document differently with 
   respect to features like syntax highlighting or formatting.</p>
 <p> In the case of the Java editor
