--- a/bundles/org.eclipse.platform.doc.isv/guide/dialogs_wizards.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/dialogs_wizards.htm
@@ -63,10 +63,10 @@ will include:</P>
 <ul>
   <li>
     
-creating and adding your pages to your wizard</li>
+Creating and adding your pages to your wizard</li>
   <li>
     
-implementing the behavior that should occur when the user presses the <b> Finish</b> button.</p>
+Implementing the behavior that should occur when the user presses the <b> Finish</b> button.</p>
   </li>
 </ul>
 
